<resources>
    <string name="app_name" translatable="false">Smittestopp</string>
    <string name="title1">Your contribution counts</string>
    <string name="onboarding1">
        <b>Thank you for downloading the Smittestopp contact tracing app.</b>
        \n\n\n
        With your help, we can alert people who have been exposed to infection,
        and we can use the app to record movement patterns amongst people to help us establish appropriate infection control measures.
    </string>
    <string name="title2">About the Smittestopp contact tracing app</string>
    <string name="onboarding2">
        You will receive a text message if you have been near another user who later tests positive for coronavirus.
        \n\n\n
        <b>The more people who use the app, the sooner we will be able to stop the spread of coronavirus.</b>
    </string>
    <string name="title3">Privacy</string>
    <string name="short_privacy_1">
        The Norwegian Institute of Public Health (FHI) stores data about your movement patterns to alert you of possible infection,
        and to measure the effectiveness of infection control measures amongst the population.
    </string>
    <string name="short_privacy_2">
        FHI does not use this information to check whether you or anyone else is complying with government recommendations and instructions.
    </string>
    <string name="short_privacy_3">
        All personal data that is collected is automatically erased after 30 days. You can also erase your own data via the app\'s settings.
    </string>
    <string name="read_privavcy">READ THE PRIVACY POLICY</string>
    <string name="privacy_policy_header">Privacy Policy</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="close">CLOSE</string>
    <string name="title4">Receive messages</string>
    <string name="onboarding4">
       We need your phone number so that we can contact you if you have been close to someone who is infected.
    </string>
    <string name="next">NEXT</string>
    <string name="register">SIGN UP</string>
    <string name="stop">Stop the app</string>
    <string name="open">Open</string>
    <string name="persistent_notification_title">Smittestopp</string>
    <string name="notification_description">Monitoring position and close contacts for infection
        tracking.</string>
    <string name="tracking_enable_button">Turn on location monitoring</string>
    <string name="open_settings">Open settings</string>
    <string name="settings">Settings</string>
    <string name="need_location_permission">Missing location permission</string>
    <string name="ask_permission">Ask me again</string>
    <string name="dont_ask_permission">Close</string>
    <string name="need_location_message">Smittestopp does not work without permission to access
        this device\'s location. To enable monitoring tap \"Ask me again\".</string>
    <string name="need_location_message_settings">Smittestopp does not work without permission to
        access this device\'s location. To enable monitoring enable position permissions in the
        settings.</string>
    <string name="gps_not_in_use">Thank you for helping. If you enable Location services, you can help out even more.</string>
    <string name="not_registered">Not registered</string>
    <string name="account">My phone</string>
    <string name="check_your_entry">Check your entry in the
        <a href="https://eid.difi.no/nb/kontakt-og-reservasjonsregisteret">
            Common contact register
        </a></string>
    <string name="check_your_data"><a href="https://helsenorge.no/koronavirus/koronaverktoy">
            Check your information and data that have been stored here
        </a></string>
    <string name="divider">divider</string>
<string name="are_sure_signout">Are you sure you want to log out? Register your phone number again to log back in.</string>
    <string name="settings_delete_data">ERASE DATA</string>
    <string name="authorisation">Monitoring</string>
    <string name="support">Support</string>
    <string name="share_app_text">Share the app</string>
    <string name="check_covid19_info">Information about the coronavirus and digital tools</string>
    <string name="coronavirus_link">
        <a href="https://helsenorge.no/koronavirus">
            Stay up to date with facts and advice about coronavirus
        </a>
    </string>
    <string name="app_share_link" translatable="false">https://helsenorge.no/smittestopp</string>
    <string name="smittestopp_link">
        <a href="https://helsenorge.no/smittestopp">
            Read more about the Smittestopp app
        </a>
    </string>
    <string name="corona_tools_link">
        <a href="https://helsenorge.no/koronavirus/koronaverktoy">
            See what data Smittestopp has stored about you
        </a>
    </string>
    <string name="corona_infection_link">
        <a href="https://www.fhi.no">
            Self-reporting of coronavirus symptoms for research purposes
        </a>
    </string>
    <string name="corona_19_d">
        The coronavirus outbreak has reached a phase in which it is no longer possible to identify the chain of infection for those who are ill.

        \n\nSocial distancing and tracking the infection are the only way to stop it.
    </string>
    <string name="monitoring">App status</string>
    <string name="info">Info</string>
    <string name="fully_activated">Enabled</string>
    <string name="main_msg">Potential contact with COVID-19-infected persons will not be monitored.</string>
    <string name="fully_active">Enabled</string>
    <string name="partially_activated">Partly enabled</string>
    <string name="deactivated">Disabled</string>
    <string name="thanks_for_help"><b>Thank you for helping</b></string>
    <string name="message_when_activated">You will be contacted if you have been in contact with, or close to,
        someone who has been confirmed as being infected with coronavirus (if the infected person has also downloaded the Smittestopp app)
    </string>
    <string name="share_app">If you want to contribute further, share Smittestopp:</string>
    <string name="contact_msg">Potential contact with COVID-19-infected persons cannot be monitored.</string>
    <string name="gps_bt_not_in_use">When Smittestopp is disabled, the app cannot be used to track corona infection. We need your help! </string>
    <string name="bt_not_in_use">Thank you for helping. If you enable Bluetooth, you can help out even more.</string>
    <string name="app_can_not_work">The app does not work optimally.</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="support_email" translatable="false"><a href="https://helsenorge.no/kontakt">https://helsenorge.no/kontakt</a></string>
    <string name="verification_error_try_later">We could not verify your phone number. Please try again later.</string>
    <string name="delete_request_failed">We could not delete your data from the server. Please try again later.</string>
    <string name="deleting">DELETING...</string>
    <string name="log_out">Log out</string>
    <string name="bluetooth_off">Bluetooth is turned off. Enable in settings.</string>
    <string name="bluetooth_on">Bluetooth is turned on.</string>
    <string name="gps_off">GPS is turned off. Enable in settings.</string>
    <string name="gps_on">GPS is turned on.</string>
    <string name="toggle_gps">Toggle GPS</string>
    <string name="toggle_bluetooth">Toggle bluetooth</string>
    <string name="desc_icon">Icon</string>
    <string name="ok">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_delete">Are you sure?</string>
    <string name="delete_data">If we erase all your data, we will not be able to know if you have been in contact with anyone who is infected with coronavirus or be able to notify you about this. This will increase the number of unrecorded cases in the national data and make it difficult to stop the spread of coronavirus.</string>
    <string name="go_to_settings">Go to settings to change the app status</string>
    <string name="go_to_setting_to_change_the_permissions"><u>Go to <b>settings</b> to change the monitoring</u></string>
    <string name="support_phone">23 32 70 00</string>
    <string name="opensource_licenses"><u>Open Source Licenses</u></string>
    <string name="privacy_policy_link"><u>Privacy Policy</u></string>
    <string name="register_age">Register age</string>
    <string name="age_why"><u>Why do you need to register your date of birth?</u></string>
</resources>